<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:theme="@style/AppTheme" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:background="@color/floatingWindowBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/colorPrimary">

            <TextView
                android:text="@string/floating_window_title"
                android:layout_height="match_parent"
                android:id="@+id/txtTitle"
                android:layout_width="200dp"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/imgClose"
                android:background="@drawable/close"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/floating_window_hint_for_entering_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtHint"
                android:textColor="@color/floatingWindowFontColor" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp">

            <EditText
                android:inputType="textPersonName"
                android:id="@+id/edtItem"
                android:layout_weight="1.48"
                android:layout_width="10dp"
                android:textColor="@color/floatingWindowFontColor"
                android:textSize="14sp"
                android:hint="Item"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnOK"
                android:layout_height="match_parent"
                android:text="@string/floating_window_button_OK"
                android:layout_width="30dp"
                android:textSize="10sp"
                android:textColor="@color/floatingWindowFontColor"
                android:layout_weight="0.13" />



        </LinearLayout>

    </LinearLayout>

</LinearLayout>